--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,15 +1,26 @@
 $color-primary: #3046C5;
-$color-secondary: #5637dd;
+$color-pale-green: rgba(190, 215, 132, 1);
 $color-pale:  rgba(251, 247, 239, 1);
-$color-mid: #901CAD;
+$color-mid: #bc4749;;
 $color-dark: rgba(22, 39, 25, 1);
 $color-black-transparent: rgba(0, 0, 0, 0.5);
 
+//Font Style
 $body-font: "Raleway", sans-serif;
 $header-font: "Righteous", cursive;
 
+// Font Size
+$fontsize-small: 9px;
+$fontsize-medium: 12px;
+
+// Font Weight
+$font-medium: 500;
+$font-bold: 900;
+
+// Main Element Css
 body {
     font-family: $body-font;
+    background-color: $color-pale;
 }
 
 h1, h2, h3 {
@@ -17,29 +28,143 @@ h1, h2, h3 {
 }
 
 h2 {
-    color: #3046C5;
+    color: $color-dark;
 }
 
-header h2 {
-    color: rgba(188, 71, 73 ,1);
+header {
+    h1 {
+        color: $color-pale;
+    }
+    h2 {
+        color: $color-mid;
+    }
 }
 
+// Navigation Css
 .navbar {
     background-color: rgba(22, 39, 25, 1);
+    padding-top: 15px;
+    padding-bottom: 15px;
+    li {
+            font-weight: $font-medium;
+            font-size: $fontsize-medium;
+            color: white;
+    }
 }
 
+.jumbotron {
+    background-image: linear-gradient(to bottom, rgba(22, 39, 25,0.6) 0%,rgba(22, 39, 25, 0.9) 100%), url("../img/blackboard.jpg");
+}
+
+// Discover Navigation Row
+.discover-navigation {
+    input {
+        border-radius: unset;
+        border-color: lightgray;
+        font-size: $fontsize-medium;
+        background-color: white;
+    }
+    button {
+        background-color: white;
+        border-radius: unset;
+        border-color: lightgray;
+        color: darkgray;
+        font-size: $fontsize-medium;
+    }
+    .dropdown-menu {
+        border-radius: unset;
+        background-color: white;
+    }
+    .dropdown-item {
+        color: gray;
+        font-size: $fontsize-medium;
+        background-color: white;
+    }
+}
+
+// Discover Content Search Fields
+
+.discover-content {
+    .col-2 {
+        margin-right: 20px;
+    }
+}
+
+.discover-content-fields {
+    h5 {
+        font-weight: bold;
+        color: $color-dark;
+        padding-top: 16px;
+    }
+    .card {
+        border-radius: unset;
+        font-size: $fontsize-medium;
+        color: darkgray;
+    }
+    .list-group-item {
+        padding: .50rem 1rem;
+    }
+    button {
+        background-color: white;
+        border-radius: unset;
+        border-color: lightgray;
+        color: darkgray;
+        font-size: $fontsize-medium;
+        margin: 2.5px;
+    }
+}
+
+.discover-card-content {
+    .row {
+        padding-top: 16px;
+    }
+}
+.discover-card {
+        img {
+            max-width: 126px;
+            max-height: 190px;
+        }
+        border-radius: unset;
+        a {
+        text-decoration: none;
+        }
+        margin-bottom: 1.25rem;
+        h5 {
+            color: $color-dark;
+            font-weight: $font-medium;
+        }
+        .card-title {
+                margin-bottom: 0.25rem;
+        }
+        .card-body {
+            padding: 0.5rem 1.25rem 0.25rem 1.25rem;
+        }
+        hr {
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+        }
+        p {
+            font-size: $fontsize-medium;
+            color: $color-dark;
+            margin-bottom: 0;
+        }
+        .card-footer {
+            padding: .5rem;
+            ul {
+                margin: 0rem;
+            }
+        }
+        #creator-link {
+            font-size: $fontsize-medium;
+            color: $color-dark;
+        }
+        .d-inline {
+            margin-bottom: 0.5rem
+        }
+    }
 footer {
     background-color: rgba(22, 39, 25, 1);
     padding: 20px 0;
 }
 
-.jumbotron {
-    padding: 30px;
-    background-color: rgba(251, 247, 239, 1);
-    color: rgba(22, 39, 25, 1);
-}
-
-div .discover-content {
-    padding-top: 30px;
-}
 
